#473: Added comment to GetEntityInstance UC noting reason for lack of COMMAND_SECURITY_DEFINITION